# rust-rp-os

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  build.rs  chainloader.img  rust-toolchain  update.sh
src/: bsp.rs  console.rs  cpu.rs  driver.rs  exception.rs  main.rs  memory.rs  panic_wait.rs  print.rs  quicksort.rs  runtime_init.rs  scheduler.rs  synchronization.rs  time.rs
src/_arch/aarch64/: cpu.rs  exception.rs  time.rs
src/_arch/aarch64/cpu/: boot.S  boot.rs  boot.s
src/_arch/aarch64/exception/: asynchronous.rs
src/bsp/: device_driver.rs  raspberrypi.rs
src/bsp/device_driver/bcm/: bcm2xxx_gpio.rs  bcm2xxx_pl011_uart.rs
src/bsp/raspberrypi/: console.rs  cpu.rs  link.ld  memory.rs
src/cpu/: boot.rs
src/exception/: asynchronous.rs
utils/: minipush.rb  miniterm.rb
