[package]
name = "kernel"
version = "0.1.0"
authors = ["twrdyyy varsill"]
edition = "2018"

[features]
default = []
bsp_rpi3 = ["register"]

[profile.release]
lto = true

[dependencies]
register = { version = "1.x.x", optional = true }
[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = { version = "5.x.x" }